<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_ValorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_total"
        app:layout_constraintBottom_toTopOf="@+id/btn_salvar_arquivos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Mostrar"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_Controle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gerenciador_de_neg_cios"
        app:layout_constraintBottom_toTopOf="@+id/btn_Inserir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_Mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar"
        app:layout_constraintBottom_toTopOf="@+id/btn_ValorTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Remover"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_Remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remover"
        app:layout_constraintBottom_toTopOf="@+id/btn_Mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Alterar"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_Inserir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserir"
        app:layout_constraintBottom_toTopOf="@+id/btn_Alterar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Controle"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_Alterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterar"
        app:layout_constraintBottom_toTopOf="@+id/btn_Remover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Inserir"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_salvar_arquivos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar em Arquivo"
        app:layout_constraintBottom_toTopOf="@+id/btn_mostrar_dados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ValorTotal"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_valor_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valor total: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mostrar_dados"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_mostrar_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mostrar todos os Dados"
        app:layout_constraintBottom_toTopOf="@+id/tv_valor_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_salvar_arquivos"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>